# tree-sitter-cddl

./: .env  .gitignore  .prototools  .rumdl.toml  AGENTS.md  CMakeLists.txt  Cargo.toml  Justfile  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  cspell.json  go.mod  grammar.js  moon.yml  package-lock.json  package.json  pom.xml  pyproject.toml  setup.py  tree-sitter.json
.config/dictionaries/: project.dic
.moon/: workspace.yml
.proto/plugins/: rumdl.toml
bindings/c/: tree-sitter-cddl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/java/main/io/github/treesitter/jtreesitter/cddl/: TreeSitterCddl.java
bindings/java/test/: TreeSitterCddlTest.java
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cddl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCddl/: cddl.h
bindings/swift/TreeSitterCddlTests/: TreeSitterCddlTests.swift
bindings/zig/: root.zig  test.zig
just/: local.just
src/: grammar.json  node-types.json  parser.c
tools/: Dockerfile.00-base-os  Dockerfile.01-proto  Dockerfile.02-rust  Dockerfile.03-cspell  Dockerfile.04-tree-sitter  Dockerfile.zz-tools
