[package]
name = "tree-sitter-cddl"
description = "Tree-sitter grammar for CDDL, the Concise Data Definition Language for CBOR and JSON data structures."
version = "0.1.0"
authors = ["Steven Johnson <steven.johnson@sakuraindustries.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "cddl"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/sakura-industries-llc/tree-sitter-cddl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.9"
