[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-cddl"
description = "Tree-sitter grammar for CDDL, the Concise Data Definition Language for CBOR and JSON data structures."
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "cddl"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Steven Johnson", email = "steven.johnson@sakuraindustries.net" }]
requires-python = ">=3.10"
license.text = "MIT OR Apache-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/sakura-industries-llc/tree-sitter-cddl"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
